home_page_design_done

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alumni Management System OF Khulna University</title>
     <link rel="stylesheet" href="" {% static 'style.css' %}"">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Signika:wght@600&display=swap">
     <style>
         *{
             padding: 0;
@@ -27,10 +28,23 @@
         .header {
             text-align: center;
             padding-bottom: 12px;
+            font-family: 'Signika', sans-serif;
+            font-weight: 600;
         }
 
         .main_bg {
             background-color: Lavender;
+        }
+        .accordion-button, .accordion-body{
+            background-color: Lavender !important;
+        }
+        .navbar-brand, h1{
+            font-family: "Audiowide", sans-serif;
+        }
+        
+        .feature h4, .feature h3, .my_font{
+            font-family: 'Signika', sans-serif;
+            font-weight: 600;
         }
     </style>
     <!--boostrap 5 css link-->
