--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,19 +1,23 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
-    {% if token_fail %}
+<div class="row justify-content-center">
+    <div class="col-lg-4">
+        <h3 class="text-center text-primary">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h3>
+        <hr class='text-primary'>
+        {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
+        {% else %}
+        <form method="POST" class="mb-2" action="{{ action_url }}">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
+            <input type="submit" class="btn btn-success btn-sm" name="action" value="{% trans 'Change Password' %}"/>
         </form>
-    {% endif %}
+        {% endif %}
+    </div>
+</div>  
 {% endblock %}
