--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -19,12 +19,12 @@
   {% endif %}
   <button type="submit" class="btn btn-primary btn-sm">{% trans "Sign Up" %}</button>
 </form>
-{% comment %} <div class="socialaccount_ballot">
-
-  
+<div class="text-center">
+  <h5>Or</h5>
+</div>
+<div class="socialaccount_ballot">
   <a href="{% provider_login_url 'google' %}"><button class="btn btn-dark btn-sm w-100"><i class="fa fa-google" style="font-size: 15px;"></i> Join With Google</button></a>
-
-</div> {% endcomment %}
+</div>
 
   </div>
 </div>
