--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -6,11 +6,18 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+<div class="row justify-content-center">
+    <div class="col-lg-4">
+        <h3 class="text-center text-primary">{% trans "Password Reset" %}</h3>
+        <hr class='text-primary'>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+
+        <p class="fw-bold">{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder.
+            Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+    </div>
+</div>
+
+
 {% endblock %}
