--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,14 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="row justify-content-center">
+    <div class="col-lg-4">
+        <h3 class="text-center text-success">{% trans "Change Password" %}</h3>
+        <hr class='text-success'>
+        <p class="lead fw-bold">{% trans 'Your password is now changed.' %}</p>
+    </div>
+</div>
 {% endblock %}
