--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,15 @@
 {% if not request.user.is_authenticated %}
-<div class="alert alert-dark p-3 mb-0 text-center">
+{% load socialaccount %}
+<div class="alert alert-dark p-3 mb-0 text-center sticky-top" id='auth_alert'>
     <strong class="pe-2">Want To Join Us?</strong>
     <a href="{% url 'account_signup' %}"><button class="btn btn-primary btn-sm mx-1">Sign Up</button></a>
     <a href="{% url 'account_login' %}?next={{request.path}}"><button
             class="btn btn-success btn-sm mx-1">Login</button></a>
     <a href="{% url 'account_signup' %}"><button class="btn btn-primary btn-sm m-1">Sign Up</button></a>
+    <a href="{% provider_login_url 'google' %}?next={{request.path}}"><button class="btn btn-dark btn-sm">
+        <i class="fa fa-google"></i> Sign In Using
+        Google
+    </button></a>
 </div>
 {% endif %}
 <footer>
