--- a/templates/home/create_profile.html
+++ b/templates/home/create_profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row justify-content-center p-4">
     <div class="col-lg-7">
-        <h2>Create Your Profile</h2>
+        <h3 class='header'>Create Your Profile</h3>
         <form action={% url 'home:create_profile' request.user.id %} method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form}}
