--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
             padding: 0;
             margin: 0;
         }
+        img {
+            width: 100% !important;
+            height: auto !important;
+          }
         .header {
             text-align: center;
             padding-bottom: 12px;
