--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,20 @@
             font-family: 'Signika', sans-serif;
             font-weight: 600;
         }
+        @media only screen and (max-width: 600px) {
+            .header-mbl{
+                text-align: start;
+                font-size: 18px !important;
+            }
+            .header-mbl a{
+                font-size: 14px !important;
+            }
+            .mbl-date{
+                font-size: .8rem !important;
+            }
+
+            
+        } 
 
         .main_bg {
             background-color: Lavender;
