--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,8 +5,7 @@
     <a href="{% url 'account_signup' %}"><button class="btn btn-primary btn-sm mx-1">Sign Up</button></a>
     <a href="{% url 'account_login' %}?next={{request.path}}"><button
             class="btn btn-success btn-sm mx-1">Login</button></a>
-    <a href="{% url 'account_signup' %}"><button class="btn btn-primary btn-sm m-1">Sign Up</button></a>
-    <a href="{% provider_login_url 'google' %}?next={{request.path}}"><button class="btn btn-dark btn-sm">
+    <a href="{% provider_login_url 'google' %}"><button class="btn btn-dark btn-sm m-1">
         <i class="fa fa-google"></i> Sign In Using
         Google
     </button></a>
