--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,31 +2,44 @@
 {% block content %}
 <h3 class="header text-primary">Blog Section</h3>
 <div class="d-flex justify-content-center pb-3">
-    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapsePost" role="button" aria-expanded="false" aria-controls="collapsePost">
+    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapsePost" role="button" aria-expanded="false"
+        aria-controls="collapsePost">
         Write a Post
-      </a>
+    </a>
 </div>
 <div class="collapse" id="collapsePost">
     <div class="row justify-content-center">
         <div class="col-sm-6">
             <form action={% url 'blog:create_post' %} method="POST">
-                {% csrf_token %} 
+                {% csrf_token %}
                 {{form.media}} {{form}}
                 <input type="submit" value="Publish" class="btn btn-primary btn-sm my-1" />
-                </form>
+            </form>
         </div>
     </div>
 </div>
+
+<div class="row g-3">
+    {% for post in posts %}
+    <div class="col-lg-4 col-md-6">
+        <div class="card h-100">
+            <div class="card-body">
+                <h6 class='text-primary mt-3'><a class='text-decoration-none' href={% url 'home:profile_view'
+                    post.author.user.id %}>{{post.author}}</a> <sub class='text-muted'>{{post.created_on}} </sub></h6>
+                    <div class="ps-4 py-1">
+                        {{post.body|truncatechars_html:100|safe}}
+                    </div>
+                    <a href={% url 'blog:post_details' post.id %}><p class='badge bg-success'>Read More</p></a>
+                    <p class='badge bg-secondary'>{{post.tag}}</p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+
 <div class="row justify-content-center">
     <div class="col-sm-6">
-        {% for post in  posts %}
-        <h6 class='text-primary mt-3'><a class='text-decoration-none' href={% url 'home:profile_view' post.author.user.id %}>{{post.author}}</a> <sub class='text-muted'>{{post.created_on}} </sub></h6>
-        <div class="ps-4">
-            {{post.body|truncatechars_html:135|safe}}
-        </div>
-        <a href={% url 'blog:post_details' post.id %}><p class='badge bg-success'>Read More</p></a>
-        <p class='badge bg-secondary'>{{post.tag}}</p>
-        {% endfor %}
 
         {% if posts.has_other_pages %}
         <ul class="pagination justify-content-center mt-2">
