bug_fix_blog_form

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -182,14 +182,14 @@
     </div>
   </div>
 </section>
-<section class="bg-light">
+<section class="">
   <div class="container">
     <div class="row gx-sm-5 align-items-center">
-      <div class="col-sm-6 pt-5 pt-sm-0 text-center">
+      <div class="col-sm-6 pt-3 pt-sm-0 text-center">
         <h2 class="fw-bold my_font">Contact With Us?</h2>
       </div>
-      <div class="col-sm-6 p-5">
-        <ul class="list-group bg-primary list-group-flush">
+      <div class="col-sm-6 p-3 p-sm-5">
+        <ul class="list-group  list-group-flush">
           <li class="list-group-item list-group-item-light"><span class="fw-bold">Main Location: </span>DSA office, Khulna University</li>
           <li class="list-group-item list-group-item-light"><span class="fw-bold">Office Phone: </span>01980492420</li>
           <li class="list-group-item list-group-item-light"><span class="fw-bold">Admin Name: </span>Mukit Hasan Pranto</li>
