--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="row g-3">
+<div class="row g-3 py-2">
     {% for post in posts %}
     <div class="col-lg-4 col-md-6">
         <div class="card h-100">
